--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: ICLR Blogposts 2023 (staging) # the website title (if blank, full name will be used instead)
+title: IFAC World Congress 2023 (Workshop) # the website title (if blank, full name will be used instead)
 first_name: abc
 middle_name: b
 last_name: c
@@ -16,9 +16,9 @@ footer_text: >
 keywords: machine-learning, ml, deep-learning, reinforcement-learning, iclr  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: iclr_favicon.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: welcome-ifac.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
-url: https://iclr-blogposts.github.io # the base hostname & protocol for your site
+url: https://roshanmsb.github.io # the base hostname & protocol for your site
 baseurl: /staging # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
@@ -41,7 +41,7 @@ repo_theme_dark: dark           # https://github.com/anuraghazra/github-readme-s
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
@@ -109,8 +109,8 @@ bing_site_verification:  # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: blogposts # blog_name will be displayed in your blog page
-blog_nav_title: blog # your blog must have a title for it to be displayed in the nav bar
+blog_name: test # blog_name will be displayed in your blog page
+blog_nav_title: test # your blog must have a title for it to be displayed in the nav bar
 blog_description: Blogpost track entries
 permalink: /blog/:year/:title/
 
