--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@ title: IFAC World Congress 2023 (Workshop) # the website title (if blank, full n
 first_name: abc
 middle_name: b
 last_name: c
-email: charlie.gauthier@umontreal.ca
+email: niravbhatt@iitm.ac.in
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  Staging website for the 2023 ICLR Blogposts track
+  Staging website for IFAC 2023 Workshop
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -19,7 +19,7 @@ lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: welcome-ifac.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://roshanmsb.github.io # the base hostname & protocol for your site
-baseurl: /staging # the subpath of your site, e.g. /blog/
+baseurl: /ifac2023 # the subpath of your site, e.g. /blog/
 last_updated: false # set to true if you want to display last updated in the footer
 impressum_path:  # set to path to include impressum link in the footer, use the same path as permalink in a page, helps to conform with EU GDPR
 
